# src/api/swagger/swagger.yaml
@@ -606,7 +606,6 @@ definitions:
       required:
         - _id
         - name
-        - organization
       properties:
         _id:
           type: string
@@ -615,8 +614,6 @@ definitions:
         description:
           type: string
         location:
-          type: string
-        organization:
           type: string
   
     MinersResponse:
@@ -727,15 +724,12 @@ definitions:
       type: object
       required:
         - name
-        - organization
       properties:
         name:
           type: string
         description:
           type: string
         location:
-          type: string
-        organization:
           type: string
     
     User:
